// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.delegate;

import "920-delegate-service-beans/src/main/proto/io/harness/delegate/resource.proto";
import "920-delegate-service-beans/src/main/proto/io/harness/delegate/security_context.proto";
import "920-delegate-service-beans/src/main/proto/io/harness/delegate/secrets.proto";

option go_package = "920_delegate_service_beans";

option java_multiple_files = true;

message K8sInfraSpec {
  repeated StepSpec steps = 1;             // Step specs for task containers
  map<string, string> env = 2;             // Any global env variables. These envs will be applied to all steps
  repeated Resource resources = 3;         // Any global resources like shared volumes
  ComputingResource compute_resource = 4;  // Global resource setting for k8s infra. The sum of task compute resources
                                           // will be used if this field is not set.
  SecurityContext security_context = 5;    // Global security context which applies to all steps
}

message StepSpec {
  string step_id = 1;                      // Step ID unique for each execution of the Step
  string image = 2;                        // Image to be used for the step
  repeated int64 ports = 3;                // Ports exposed for the step
  ComputingResource compute_resource = 4;  // Resource requirements for infra types that need it (e.g. K8S CPU/Mem).
  map<string, string> env = 5;             // Env variables
  repeated string commands = 6;            // Commands to be executed
  repeated string args = 7;                // Args to be passed
  SecurityContext security_context = 8;    // Container specific security context which overrides the global settings
  Secrets secrets = 9;                     // Secrets (ids) needed by this container
}
